can you please work now?

--- a/express-CRUD/package.json
+++ b/express-CRUD/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "heroku-postbuild": "cd react-front-end && npm install && npm run build"
   },
   "author": "",
